# stock-platform-centrifugo

./: .env.example  .gitignore  CONSTANTS_GUIDE.md  Dockerfile  Makefile  OPTIMIZATION_ANALYSIS.md  README.md  TECHNICAL.md  USAGE.md  docker-compose.yml  docker_entry.py  pyproject.toml  simple_test.py
.claude/: settings.local.json
src/stock_platform_sdk/: __init__.py  centrifugo_qmt.py  centrifugo_websocket_client.py  config.py  constants.py  handlers.py  mock_context.py  qmt_mock.py  qmt_state.py  qmt_trading.py  redis_bridge.py  signal_client.py
tests/: example_qmt_strategy.py  simple_test.py  test_constants.py  test_integration.py  test_sdk.py  test_websocket_client.py
