[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-platform-sdk"
version = "0.3.7"
description = "QMT trading SDK with HTTP API integration - query signals from Redis Stream"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
dependencies = [
    "requests>=2.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]
